# VortexEngine

./: CMakeLists.txt  README.md  VortexEngine.kdev4
inc/glad/: glad.h
inc/graphics/core/: renderManager.hpp  shader.hpp
inc/graphics/model/: mesh.hpp
inc/graphics/scene/: scene.hpp
inc/graphics/scene/camera/: camera.hpp  cameraFirstPerson.hpp  cameraOrbit.hpp
inc/graphics/shaders/: shader.frag  shader.vert
inc/input/: inputManager.hpp
inc/input/inputCommandFactory/: inputCommandFactory.hpp
inc/input/inputCommands/: abstractInputCommand.hpp  nullInputCommand.hpp
inc/input/inputCommands/cameraCommands/: cameraDownCommand.hpp  cameraInCommand.hpp  cameraLeftCommand.hpp  cameraOutCommand.hpp  cameraRightCommand.hpp  cameraUpCommand.hpp
inc/input/inputMapping/: abstractInputMapping.hpp  defaultInputMapping.hpp
inc/math/: alignedVector.hpp  mat.hpp  quaternion.hpp  vec.hpp  vecSOA.hpp
inc/memory/: memoryManager.hpp  memoryUtil.hpp
inc/memory/allocator/: doubleEndedStackAllocator.hpp  poolAllocator.hpp  stackAllocator.hpp
inc/util/: printArray.h
inc/window/: frame.hpp  windowManager.hpp
src/: CMakeLists.txt  main.cpp
src/glad/: glad.c
src/graphics/: CMakeLists.txt
src/graphics/core/: renderManager.cpp  shader.cpp
src/graphics/model/: mesh.cpp
src/graphics/scene/: scene.cpp
src/graphics/scene/camera/: camera.cpp  cameraFirstPersion.cpp  cameraOrbit.cpp
src/input/: CMakeLists.txt  inputManager.cpp
src/input/inputCommandFactory/: inputCommandFactory.cpp
src/input/inputCommands/: abstractInputCommand.cpp  nullInputCommand.cpp
src/input/inputCommands/cameraCommands/: cameraDownCommand.cpp  cameraInCommand.cpp  cameraLeftCommand.cpp  cameraOutCommand.cpp  cameraRightCommand.cpp  cameraUpCommand.cpp
src/input/inputMapping/: abstractInputMapping.cpp  defaultInputMapping.cpp
src/math/: CMakeLists.txt  mat.cpp  quaternion.cpp  vecSOA.cpp
src/memory/: CMakeLists.txt  memoryManager.cpp  memoryUtil.cpp
src/memory/allocator/: poolAllocator.cpp  stackAllocator.cpp
src/window/: CMakeLists.txt  frame.cpp  windowManager.cpp
